app ci- orb version update

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -350,6 +350,25 @@
 
   </div>
 
+
+  <!-- Dummy data -->
+  <h2>{{ title }}</h2>
+  <div  style="display: flex; flex-wrap: wrap; max-width: 1024px">
+    <div *ngFor="let user of users" style="background: darkgrey; padding: 10px; margin: 5px">
+      <h5>{{ user.name }}</h5>
+      <div>
+        <span>{{ user.address.city }}, {{ user.address.street }}</span>
+      </div>
+      <div>
+        <p>{{ user.phone }}</p>
+        <p>{{ user.email }}</p>
+        <p>{{ user.website }}</p>
+      </div>
+    </div>
+  </div>
+
+
+
   <!-- Resources -->
   <h2>Resources</h2>
   <p>Here are some links to help you get started:</p>
@@ -452,31 +471,6 @@
     </a>
   </div>
 
-  <div class="page-content">
-    <div class="container content-wrapper">
-      <div class="page-title">
-        <h2>{{ title }}</h2>
-      </div>
-      <div class="row">
-        <div *ngFor="let user of users" class="col-md-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">{{ user.name }}</h5>
-              <div class="card-text">
-                <span>{{ user.address.city }}, {{ user.address.street }}</span>
-              </div>
-              <div>
-                <p>{{ user.phone }}</p>
-                <p>{{ user.email }}</p>
-                <p>{{ user.website }}</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
   <!-- Footer -->
   <footer>
       Love Angular?&nbsp;
@@ -497,13 +491,5 @@
   </svg>
 
 </div>
-
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <router-outlet></router-outlet>
